[tool.poetry]
name = "dependably-me"
version = "0.1.0"
description = ""
authors = ["Ken Payne <ken@meltano.com>"]
readme = "README.md"
packages = [{include = "dependably_me"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
